--- a/src/app/orbit-list/orbit-list.component.html
+++ b/src/app/orbit-list/orbit-list.component.html
@@ -1,4 +1,4 @@
-<table>
+<table id = "satTable">
     <tr class="header-row">
         <th (click)="sort('name')" class="sortable">Name</th>
         <th (click)="sort('type')" class="sortable">Type</th>
